Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10
-
96ef00041 (dev), cb199ab2a (6.9), 983bb1f22 (6.8)
Description
While all other tst_QTimer functions are clean, tst_QTimer::crossThreadSingleShotToFunctor() leaks like a sieve, cf. attached log.
git-blame fingers 87535e4e4337596066258e361143cb9906e89512, CC vhilshei
Attachments
Issue Links
- is duplicated by
-
QTBUG-115257 cross-thread QTimer::singleShot() potential memleak
-
- Closed
-
For Gerrit Dashboard: QTBUG-135636 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
637676,18 | QTimer: delete pending single shot timers when receiver's thread dies | dev | qt/qtbase | Status: MERGED | +2 | 0 |
639165,3 | QTimer: delete pending single shot timers when receiver's thread dies | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
640281,3 | QTimer: delete pending single shot timers when receiver's thread dies | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |